--- a/style.css
+++ b/style.css
@@ -99,30 +99,51 @@ table {
 }
 
 .navbar {
+    height: 100%;
+    width: 160px;
+    position: fixed;
+    z-index: 1;
     top: 0;
+    left: 0;
+    overflow-x: hidden;
+    padding: 10px 10px 10px 0px;
+    color: #060808;
 }
 
 .navbar a {
-    color: #40514E;
-    padding: 4px 6px;
+    padding: 6px 8px 6px 0px;
+    text-decoration: none;
+    color: #D6E6F2 padding: 4px 6px;
     font-size: 17px;
+    display: block;
 }
 
 .navbar a:hover {
-    background-color: #66BFBF;
+    background-color: #6c6c6c;
     color: #ffffff;
 }
 
 .header__nav_list {
     list-style-type: none;
     margin: 1rem;
-    display: flex;
-    justify-content: center;
+    padding-inline-start: 10px;
+    /* display: flex;
+    justify-content: center; */
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 .top-container {
     background-image: url(images/beach.jpeg);
-    margin-top: -50px;
+    margin-top: -150px;
     border-top: 0;
     padding-top: 0;
     text-align: center;
